# trail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: actionlint.yml  capture-quality-gates.yml  release.yml  ui-quality-gates.yml
apps/audit/: README.md  package.json
apps/audit/src/: audit.ts  cli.ts  exit-codes.ts  index.ts  scanner.ts  staged.ts  violations.ts
apps/audit/test/: audit.test.ts  bin-entrypoint.test.ts  canonical-fixture.test.ts  cli.test.ts  performance.test.ts  scanner.test.ts  staged.test.ts  violations.test.ts
apps/audit/test/fixtures/: synthetic-pattern-fixtures.json
apps/capture/: README.md  biome.json  package.json  tsconfig.json  vitest.config.ts
apps/capture/scripts/: copy-bin.mjs  regen-canonical-fixtures.mjs
apps/capture/src/: cli.ts  exit-codes.ts  generate.ts  index.ts  version.ts
apps/capture/src/claims/: llm.ts  mechanical.ts
apps/capture/src/decide/: index.ts
apps/capture/src/extract/: extract.ts
apps/capture/src/git/: state.ts  url.ts
apps/capture/src/io/: atomic.ts  signals.ts
apps/capture/src/packet/: build.ts  recapture.ts  stable-id.ts  types.ts  ulid.ts  validate-refs.ts  validate-schema.ts  yaml.ts
apps/capture/src/post/: fence.ts  gh-shell.ts  index.ts  posted-to-pr.ts
apps/capture/src/redaction/: layer1.ts  layer2.ts  patterns.ts
apps/capture/src/render/: markdown.ts
apps/capture/src/storage/: noop.ts  sqlite.ts  types.ts
apps/capture/src/test-runners/: patterns.ts
apps/capture/src/transcript/: reader.ts
apps/capture/test/: atomic-write.test.ts  bin-entrypoint.test.ts  canonical-session.test.ts  cli-helpers.test.ts  decide.test.ts  extract.test.ts  fence.test.ts  find-git-subdirectories.test.ts  generate-integration.test.ts  gh-shell.test.ts  llm-fallback.test.ts  markdown-render.test.ts  parity-md.test.ts  parity-mechanical.test.ts  parity-perdiff.test.ts  patterns-load.test.ts  post-integration.test.ts  post.test.ts  posted-to-pr.test.ts  recapture.test.ts  redaction-matrix.test.ts  redaction.test.ts  schema-validate.test.ts  spawn-claude-runner.test.ts  stable-id.test.ts  storage-fallback.test.ts  transcript-reader.test.ts  ulid.test.ts  userinfo-strip.test.ts  yaml-property.test.ts
apps/capture/test/fixtures/: README.md  canonical-session-perdiff.yml  canonical-session.md  canonical-session.yml
apps/capture/test/helpers/: parity-fixture.ts
apps/ui/: README.md  drizzle.config.ts  eslint.config.mjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.perf.config.ts  vitest.wire-contract.config.ts
apps/ui/.storybook/: main.ts  preview.ts
apps/ui/public/fonts/: README.md
apps/ui/scripts/: codegen-tokens.mjs  font-integrity-update.mjs  lint-css-tokens.mjs
apps/ui/src/: App.css  App.tsx  main.tsx
apps/ui/src-tauri/: CSP_RATIONALE.md  Cargo.toml  tauri.conf.json
apps/ui/src-tauri/capabilities/: default.json
apps/ui/src-tauri/icons/: icon.icns
apps/ui/src-tauri/src/: capabilities_negative.rs  cli_bridge.rs  db.rs  ipc.rs  main.rs  migrations.rs  saga.rs  sessions.rs  settings.rs  shell_allowlist.rs  spawn.rs  watcher.rs  yaml_safety.rs
apps/ui/src-tauri/tests/: ipc_dispatch_smoke.rs  shell_plugin_contract.rs
apps/ui/src/components/primitives/: Banner.css  Banner.tsx  Button.css  Button.tsx  Card.css  Card.tsx  Chip.css  Chip.tsx  CodeBlock.css  CodeBlock.tsx  DiffHunk.css  Modal.css  (+17 more)
apps/ui/src/db/: audit-log-hash.ts  migrate.ts  queries.ts  schema.ts
apps/ui/src/design/: font-integrity.json  fonts.css  global.css  index.ts  motion.css  tokens.css  tokens.ts
apps/ui/src/ipc/: client.ts  contract.ts
apps/ui/src/services/: decision-shortcuts.ts  gh-post.ts  highlight.ts  keyboard.ts  location.ts  open-external.ts  packet-loader.ts  recent-sessions.ts  saga-client.ts  watcher-events.ts
apps/ui/tests/_helpers/: ipc-mock-state.ts  ipc-mock.ts  jest-axe-matchers.d.ts  jest-axe.d.ts  setup.ts
apps/ui/tests/e2e/: capture-surface.spec.ts  diff-hunk-perf.spec.ts  diff-hunk-themes.spec.ts  sidebar-stress.spec.ts  sprint4-decisions.spec.ts  sprint5-gh-post.spec.ts  sprint6-perf-gates.spec.ts  sprint6-scenarios.spec.ts
apps/ui/tests/perf/: sidebar-stress.test.tsx
apps/ui/tests/unit/: ApprovalTrail.test.tsx  Banner.test.tsx  Button.test.tsx  CaptureSurface.test.tsx  Card.test.tsx  Chip.test.tsx  ClaimRow.test.tsx  ClaimsTab.test.tsx  CodeBlock.test.tsx  DiffHunk.test.tsx  DiffTab.test.tsx  EdgeFlowBanner.test.tsx  EmptyState.test.tsx  FirstRun-autodetect.test.tsx  HorizonLine.test.tsx  IconRail.test.tsx  KeyboardKey.test.tsx  KeyboardOverlay.test.tsx  M1ReviewerModal.test.tsx  M2GhAuthModal.test.tsx  M3RedactionPreviewModal.test.tsx  M4PostToPrModal.test.tsx  M5RecaptureDriftModal.test.tsx  M6SettingsModal-cli-bridge.test.tsx  M6SettingsModal-detect.test.tsx  M6SettingsModal.test.tsx  Modal.test.tsx  PacketHeader.test.tsx  PacketView-j12.test.tsx  PacketView.test.tsx  RecaptureBanner.test.tsx  RedactionTab.test.tsx  Risk.test.tsx  RiskHistogram.test.tsx  Skeleton.test.tsx  Tabs.test.tsx  Toast.test.tsx  ToastHost.test.tsx  TopBar.test.tsx  TrailFilters.test.tsx  (+19 more)
apps/ui/tests/wire-contract/: wire-roundtrip.test.ts
docs/specs/: phase-1-capture-audit.md  phase-1-capture-design-review.md  phase-1-capture.md  phase-2-ab-resolution.md  phase-2-architecture-reconciliation.md  phase-2-design-review-b6.md  phase-2-design-system.md  phase-2-screen-specs.md  phase-2-ui-flows.md  phase-2-ui-stories.md
schema/: HOOK-EVENT-MATRIX.md  HOOK-PROBE-FINDINGS.md  PACKET-SHAPE-ALTERNATIVES.md  REDACTION-DESIGN.md  pr-change-packet.v0.1.1.schema.json  pr-change-packet.v0.1.1.yml  pr-change-packet.v0.1.yml
scripts/: audit-release-symbols.sh
(+58 files in other folders)
